--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CountdownTimer</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/images/favicon/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/src/assets/images/favicon/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/src/assets/images/favicon/favicon-16x16.png" />
+    <link rel="manifest" href="/src/assets/images/favicon/site.webmanifest" />
+    <link rel="mask-icon" href="/src/assets/images/favicon/safari-pinned-tab.svg" color="#1e1f29" />
+    <meta name="msapplication-TileColor" content="#1e1f29" />
+    <meta name="theme-color" content="#1e1f29" />
   </head>
   <body>
     <div id="root"></div>
